--- a/WebContent/WEB-INF/templates/BasicTemplate.html
+++ b/WebContent/WEB-INF/templates/BasicTemplate.html
@@ -1,42 +1,70 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0
+Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-
+transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-<head>
-<title><ui:insert name="title">Default title</ui:insert></title>
-</head>
+<!-- facelets sind für den view zuständig -->
+<h:head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<body>
-	<ui:debug hotkey="x"
-		rendered="#{initParam['javax.faces.FACELETS_DEVELOPMENT']}" />
+	<title><ui:insert name="title">JSF</ui:insert></title>
 
-	<div id="header">
+	<!-- boostrap style -->
+	<h:outputStylesheet name="bootstrap/css/bootstrap.css" />
+
+	<!-- intergrate AminLTE-template -->
+	<h:outputStylesheet name="adminlte/css/AdminLTE.css" />
+	<h:outputStylesheet name="adminlte/css/skins/_all-skins.min.css" />
+
+	<!-- Font Awesome -->
+	<h:outputStylesheet name="font-awesome.min.css" library="css" />
+
+	<!-- own style -->
+	<h:outputStylesheet name="styles.css" library="css" />
+</h:head>
+<h:body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+
 		<ui:insert name="header">
-    	Header area.  See comments below this line in the source.
-    	<!--  include your header file or uncomment the include below and create header.xhtml in this directory -->
-			<!-- <ui:include src="header.xhtml"/> -->
+			<ui:include src="partials/header.xhtml" />
 		</ui:insert>
-	</div>
 
-
-	<div id="content">
-		<ui:insert name="content">
-    	Content area.  See comments below this line in the source.
-    	<!--  include your content file or uncomment the include below and create content.xhtml in this directory -->
-			<!-- <div> -->
-			<!-- <ui:include src="content.xhtml"/> -->
-			<!-- </div> -->
+		<ui:insert name="aside">
+			<ui:include src="partials/aside.xhtml" />
 		</ui:insert>
-	</div>
 
-	<div id="footer">
-		<ui:insert name="footer">
-    	Footer area.  See comments below this line in the source.
-    	<!--  include your header file or uncomment the include below and create footer.xhtml in this directory -->
-			<!--<ui:include src="footer.xhtml"/>  -->
+		<!-- Content Wrapper. Contains page content -->
+		<div class="content-wrapper">
+			<ui:insert name="content">
+				<ui:include src="partials/content.xhtml" />
+			</ui:insert>
+		</div>
+
+		<ui:insert name="foooter">
+			<ui:include src="partials/footer.xhtml" />
 		</ui:insert>
+
 	</div>
+	<!-- /.wrapper -->
 
-</body>
+	<!-- REQUIRED JS SCRIPTS -->
 
+	<!-- jQuery -->
+	<h:outputScript name="jquery.min.js" library="js" />
+	<!-- Bootstrap 3.3.6 -->
+	<h:outputScript name="bootstrap.js" library="bootstrap/js/" />
+	<!-- AdminLTE App -->
+	<h:outputScript name="app.min.js" library="adminlte/js" />
+
+	<!-- Optionally, you can add Slimscroll and FastClick plugins.
+     Both of these plugins are recommended to enhance the
+     user experience. Slimscroll is required when using the
+     fixed layout. -->
+
+</h:body>
 </html>
