profile page integrated

--- a/WebContent/WEB-INF/templates/partials/header.xhtml
+++ b/WebContent/WEB-INF/templates/partials/header.xhtml
@@ -147,7 +147,10 @@
 							<!-- Menu Footer-->
 							<li class="user-footer">
 								<div class="pull-left">
-									<a href="#" class="btn btn-default btn-flat">Profile</a>
+									<h:form>
+										<h:commandLink value="Profile" action="profile"
+											class="btn btn-default btn-flat" />
+									</h:form>
 								</div>
 								<div class="pull-right">
 									<h:form>
