logout option only if logedin

--- a/WebContent/WEB-INF/templates/partials/header.xhtml
+++ b/WebContent/WEB-INF/templates/partials/header.xhtml
@@ -126,21 +126,8 @@
 									<h:outputText value="#{loginBean.studentBean.username}" />
 									<small>Member since Dec. 2016</small>
 								</p></li>
-							<!-- Menu Body -->
-							<li class="user-body">
-								<div class="row">
-									<div class="col-xs-4 text-center">
-										<a href="#">Followers</a>
-									</div>
-									<div class="col-xs-4 text-center">
-										<a href="#">Sales</a>
-									</div>
-									<div class="col-xs-4 text-center">
-										<a href="#">Friends</a>
-									</div>
-								</div> <!-- /.row -->
-							</li>
 							<!-- Menu Footer-->
+							<h:panelGroup rendered="#{loginBean.studentBean.angemeldet}">
 							<li class="user-footer">
 								<div class="pull-left">
 									<h:form>
@@ -155,6 +142,7 @@
 									</h:form>
 								</div>
 							</li>
+							</h:panelGroup>
 						</ul>
 					</li>
 					<!-- Control Sidebar Toggle Button -->
