section berechneter content deleted

--- a/WebContent/WEB-INF/templates/partials/footer.xhtml
+++ b/WebContent/WEB-INF/templates/partials/footer.xhtml
@@ -7,7 +7,7 @@
 	<div class="main-footer" style="display: block;">
 		<!-- To the right -->
 		<div class="pull-right hidden-xs">
-			<a href="https://github.com/PS-1/JSF" target="_blank"> <strong> <i
+			<a href="https://github.com/dome4/JSF2.0.git" target="_blank"> <strong> <i
 					class="fa fa-github"></i> Github
 			</strong>
 			</a>
