--- a/WebContent/WEB-INF/templates/partials/header.xhtml
+++ b/WebContent/WEB-INF/templates/partials/header.xhtml
@@ -8,8 +8,8 @@
 	<div class="main-header" style="display: block;">
 		<!-- Logo -->
 		<a href="index.xhtml" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
-			<span class="logo-mini"><b>A</b>LT</span> <!-- logo for regular state and mobile devices -->
-			<span class="logo-lg"><b>Admin</b>LTE</span>
+			<span class="logo-mini"><b>F</b>W</span> <!-- logo for regular state and mobile devices -->
+			<span class="logo-lg"><b>Face</b>Worlds</span>
 		</a>
 		<!-- Header Navbar -->
 		<div class="navbar navbar-static-top" role="navigation"
